tests/FSharp.Analyzers.Tests/data/partialapp/negative/No warning for left piped2 args.fs
module M

let myFunc a b c = a + b + c

myFunc 10 <|| (20, 30)
